# redaw

./: Cargo.toml  README.md  changelog.md  index.html  quick_start.md
.github/workflows/: aur-upload.yml  choco-upload.yml  release.yml  snap-upload.yml
crates/redaw-plugin-api/: Cargo.toml
crates/redaw-plugin-host/: Cargo.toml
crates/redaw-plugin-host/src/: backend_clap.rs  backend_lv2.rs  plugin_facade.rs
fastlane/metadata/android/en-US/changelogs/: 16778503.txt  16779010.txt
others/flathub/: io.github.mlm_games.yadaw.desktop  io.github.mlm_games.yadaw.metainfo.xml
others/snap/: snapcraft.yaml
src/: audio.rs  audio_state.rs  command_processor.rs  constants.rs  entry.rs  error.rs  ext.rs  lib.rs  main.rs  messages.rs  midi_input.rs  paths.rs  performance.rs  plugin.rs  presets.rs  project_manager.rs
src/experiments/ui/: tutorial.rs
src/model/: plugin.rs
src/ui/: app.rs  dialogs.rs  menu_bar.rs  mixer.rs  mod.rs  piano_roll_view.rs  timeline.rs  tracks.rs  transport.rs
